--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "devDependencies": {
     "appium": "^1.16.0-beta.1",
-    "babel-preset-expo": "^7.1.0"
+    "babel-preset-expo": "^7.1.0",
+    "jest-expo": "^35.0.0",
+    "react-test-renderer": "16.8"
   },
   "private": true
 }
