--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
+  "private": true,
   "main": "node_modules/expo/AppEntry.js",
+  "jest": { "preset": "jest-expo" },
   "dependencies": {
     "expo": "^35.0.0",
     "react": "16.8.3",
@@ -12,6 +14,5 @@
     "babel-preset-expo": "^7.1.0",
     "jest-expo": "^35.0.0",
     "react-test-renderer": "16.8"
-  },
-  "private": true
+  }
 }
