--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "appium": "^1.16.0-beta.1",
     "babel-preset-expo": "^7.1.0",
     "jest-expo": "^35.0.0",
-    "react-test-renderer": "16.8"
+    "react-test-renderer": "16.8",
+    "webdriverio": "^5.16.7"
   }
 }
