--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-native-svg": "9.9.5",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
-    "react-navigation-stack": "^1.10.3"
+    "react-navigation-stack": "^1.10.3",
+    "rn-sequelize": "punisher97/rn-sequelize"
   },
   "devDependencies": {
     "appium": "^1.16.0-beta.1",
