--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "jest-expo": "^35.0.0",
     "react-native-testing-library": "^1.11.1",
     "react-test-renderer": "16.8",
+    "sequelize": "^5.21.2",
+    "sqlite3": "^4.1.1",
     "webdriverio": "^5.16.7"
   }
 }
