--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "camelcase-keys": "^6.1.1",
     "expo": "^35.0.0",
     "expo-image-picker": "^7.0.0",
     "react": "16.8.3",
@@ -18,7 +19,8 @@
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
-    "rn-sequelize": "punisher97/rn-sequelize"
+    "rn-sequelize": "punisher97/rn-sequelize",
+    "snakecase-keys": "^3.1.0"
   },
   "devDependencies": {
     "appium": "^1.16.0-beta.1",
