--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "camelcase-keys": "^6.1.1",
     "expo": "^35.0.0",
+    "expo-file-system": "~7.0.0",
     "expo-image-picker": "^7.0.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
