--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@react-native-community/netinfo": "~3.2.1",
     "camelcase-keys": "^6.1.1",
     "expo": "^35.0.0",
+    "expo-background-fetch": "~7.0.0",
     "expo-file-system": "~7.0.0",
     "expo-image-picker": "^7.0.0",
     "expo-network": "^2.0.0",
+    "expo-task-manager": "~7.0.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
