--- a/app.json
+++ b/app.json
@@ -2,12 +2,16 @@
   "expo": {
     "name": "field-app",
     "slug": "field-app",
-    "privacy": "public",
+    "version": "0.1.0",
+    "owner": "truefootprint",
+    "privacy": "unlisted",
     "sdkVersion": "35.0.0",
-    "platforms": ["android", "web"],
-    "version": "1.0.0",
+    "platforms": ["android"],
     "orientation": "portrait",
-    "updates": { "fallbackToCacheTimeout": 0 },
-    "assetBundlePatterns": ["**/*"]
+    "githubUrl": "https://github.com/truefootprint/field-app",
+    "android": { "package": "com.truefootprint.field_app" },
+    "icon": "app/assets/images/app-icon.png",
+    "assetBundlePatterns": ["**/*"],
+    "updates": { "fallbackToCacheTimeout": 0 }
   }
 }
