--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "react-native-screens": "~1.0.0-alpha.23",
     "react-native-svg": "9.9.5",
     "react-native-web": "^0.11.7",
+    "react-native-webview": "7.0.5",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
+    "rn-pdf-reader-js": "^0.7.2",
     "rn-sequelize": "punisher97/rn-sequelize",
     "snakecase-keys": "^3.1.0"
   },
