--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-navigation-stack": "^1.10.3",
     "rn-pdf-reader-js": "^0.7.2",
     "rn-sequelize": "punisher97/rn-sequelize",
-    "snakecase-keys": "^3.1.0"
+    "snakecase-keys": "^3.1.0",
+    "uuid": "^7.0.1"
   },
   "devDependencies": {
     "appium": "^1.16.0-beta.1",
