--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "expo-file-system": "~7.0.0",
     "expo-image-picker": "^7.0.0",
     "expo-network": "^2.0.0",
+    "expo-random": "~7.0.0",
     "expo-secure-store": "^8.0.0",
     "expo-task-manager": "~7.0.0",
     "react": "16.8.3",
@@ -31,7 +32,7 @@
     "rn-pdf-reader-js": "^0.7.2",
     "rn-sequelize": "punisher97/rn-sequelize",
     "snakecase-keys": "^3.1.0",
-    "uuid": "^7.0.1"
+    "uuid": "^7.0.2"
   },
   "devDependencies": {
     "appium": "^1.16.0-beta.1",
