--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-navigation-stack": "^1.10.3",
     "rn-pdf-reader-js": "^0.7.2",
     "rn-sequelize": "punisher97/rn-sequelize",
+    "sentry-expo": "^2.0.1",
     "snakecase-keys": "^3.1.0",
     "uuid": "^7.0.2"
   },
