Add the Android and iOS Google Maps API keys
These aren’t sensitive because they’re locked to the signed application
through the Google Developer Console under the ‘FieldApp’ project.

I followed these steps: https://docs.expo.io/versions/latest/sdk/map-view/

--- a/app.json
+++ b/app.json
@@ -23,7 +23,15 @@
         "LOCATION",
         "NOTIFICATIONS",
         "USER_FACING_NOTIFICATIONS"
-      ]
+      ],
+      "config": {
+        "googleMaps": { "apiKey": "AIzaSyBcT8g_xEPsRJ59qKoVfeuycYGxeYqOERQ" }
+      }
+    },
+    "ios": {
+      "config": {
+        "googleMapsApiKey": "AIzaSyD69i5vAUkOXZPtdAoqs17uLIoTS73v00M"
+      }
     }
   }
 }
