--- a/app.json
+++ b/app.json
@@ -12,15 +12,16 @@
     "splash": { "image": "app/assets/images/splash-screen.png" },
     "assetBundlePatterns": ["app/assets/**/*"],
     "updates": { "fallbackToCacheTimeout": 0 },
-    "version": "0.34.0",
+    "version": "0.36.0",
     "android": {
-      "versionCode": 34,
+      "versionCode": 36,
       "package": "com.truefootprint.field_app",
       "permissions": [
         "CAMERA",
         "CAMERA_ROLL",
         "WRITE_EXTERNAL_STORAGE",
-        "LOCATION",
+        "ACCESS_COARSE_LOCATION",
+        "ACCESS_FINE_LOCATION",
         "NOTIFICATIONS",
         "USER_FACING_NOTIFICATIONS"
       ],
