Set the display name of the app correctly

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "field-app",
+    "name": "FieldApp",
     "slug": "field-app",
     "owner": "truefootprint",
     "privacy": "unlisted",
