--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-fullwidth-image": "^0.1.3",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-maps": "~0.25.0",
+    "react-native-markdown-display": "^6.0.1",
     "react-native-mime-types": "^2.2.1",
     "react-native-reanimated": "~1.2.0",
     "react-native-screens": "~1.0.0-alpha.23",
