--- a/package.json
+++ b/package.json
@@ -5,48 +5,49 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@react-native-community/netinfo": "~3.2.1",
+    "@react-native-community/netinfo": "5.5.1",
     "Base64": "^1.1.0",
-    "camelcase-keys": "^6.1.1",
-    "expo": "^35.0.0",
-    "expo-background-fetch": "~7.0.0",
-    "expo-file-system": "~7.0.0",
-    "expo-image-picker": "^7.0.0",
-    "expo-localization": "~7.0.0",
-    "expo-location": "~7.0.0",
-    "expo-network": "^2.0.0",
-    "expo-random": "~7.0.0",
-    "expo-secure-store": "^8.0.0",
-    "expo-task-manager": "~7.0.0",
-    "react": "16.8.3",
-    "react-dom": "16.8.3",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "camelcase-keys": "^6.2.2",
+    "expo": "^37.0.0",
+    "expo-background-fetch": "~8.1.0",
+    "expo-file-system": "~8.1.0",
+    "expo-image-picker": "~8.1.0",
+    "expo-localization": "~8.1.0",
+    "expo-location": "~8.1.0",
+    "expo-network": "~2.1.0",
+    "expo-random": "~8.1.0",
+    "expo-secure-store": "~8.1.0",
+    "expo-task-manager": "~8.1.0",
+    "lottie-react-native": "~2.6.1",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-fullwidth-image": "^0.1.3",
-    "react-native-gesture-handler": "~1.3.0",
-    "react-native-maps": "~0.25.0",
-    "react-native-markdown-display": "^6.0.1",
-    "react-native-mime-types": "^2.2.1",
-    "react-native-reanimated": "~1.2.0",
-    "react-native-screens": "~1.0.0-alpha.23",
-    "react-native-svg": "9.9.5",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-maps": "0.26.1",
+    "react-native-markdown-display": "^6.1.6",
+    "react-native-mime-types": "^2.3.0",
+    "react-native-reanimated": "~1.7.0",
+    "react-native-screens": "~2.2.0",
+    "react-native-svg": "11.0.1",
     "react-native-web": "^0.11.7",
-    "react-native-webview": "7.0.5",
-    "react-navigation": "^4.0.10",
+    "react-native-webview": "8.1.1",
+    "react-navigation": "^4.4.0",
     "react-navigation-stack": "^1.10.3",
     "rn-pdf-reader-js": "^0.7.2",
-    "rn-sequelize": "punisher97/rn-sequelize",
-    "sentry-expo": "^2.0.1",
-    "snakecase-keys": "^3.1.0",
-    "uuid": "^7.0.2"
+    "rn-sequelize": "github:punisher97/rn-sequelize",
+    "sentry-expo": "^2.1.2",
+    "snakecase-keys": "^3.2.0",
+    "uuid": "^7.0.3"
   },
   "devDependencies": {
-    "appium": "^1.16.0-beta.1",
-    "babel-preset-expo": "^7.1.0",
-    "jest-expo": "^35.0.0",
-    "react-native-testing-library": "^1.11.1",
+    "appium": "^1.18.1",
+    "babel-preset-expo": "^8.1.0",
+    "jest-expo": "^37.0.0",
+    "react-native-testing-library": "^1.14.0",
     "react-test-renderer": "16.8",
-    "sequelize": "^5.21.2",
+    "sequelize": "^5.22.3",
     "sqlite3": "^4.1.1",
-    "webdriverio": "^5.16.7"
+    "webdriverio": "^5.23.0"
   }
 }
