--- a/app.json
+++ b/app.json
@@ -22,7 +22,7 @@
     "version": "0.57.6",
     "android": {
       "versionCode": 63,
-      "package": "com.truefootprint.field-app",
+      "package": "com.truefootprint.field_app",
       "permissions": [
         "CAMERA",
         "CAMERA_ROLL",
