--- a/package.json
+++ b/package.json
@@ -5,45 +5,45 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@react-native-community/netinfo": "5.5.1",
+    "@react-native-community/netinfo": "5.9.6",
     "Base64": "^1.1.0",
     "camelcase-keys": "^6.2.2",
-    "expo": "^37.0.0",
-    "expo-background-fetch": "~8.1.0",
-    "expo-file-system": "~8.1.0",
-    "expo-image-picker": "~8.1.0",
-    "expo-localization": "~8.1.0",
-    "expo-location": "~8.1.0",
-    "expo-network": "~2.1.0",
-    "expo-random": "~8.1.0",
-    "expo-secure-store": "~8.1.0",
-    "expo-task-manager": "~8.1.0",
+    "expo": "^39.0.0",
+    "expo-background-fetch": "~8.5.0",
+    "expo-file-system": "~9.2.0",
+    "expo-image-picker": "~9.1.0",
+    "expo-localization": "~9.0.0",
+    "expo-location": "~9.0.0",
+    "expo-network": "~2.3.0",
+    "expo-random": "~9.0.0",
+    "expo-secure-store": "~9.2.0",
+    "expo-task-manager": "~8.5.0",
     "lottie-react-native": "~2.6.1",
-    "react": "16.9.0",
-    "react-dom": "16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
     "react-native-fullwidth-image": "^0.1.3",
-    "react-native-gesture-handler": "~1.6.0",
-    "react-native-maps": "0.26.1",
+    "react-native-gesture-handler": "~1.7.0",
+    "react-native-maps": "0.27.1",
     "react-native-markdown-display": "^6.1.6",
     "react-native-mime-types": "^2.3.0",
-    "react-native-reanimated": "~1.7.0",
-    "react-native-screens": "~2.2.0",
-    "react-native-svg": "11.0.1",
-    "react-native-web": "^0.11.7",
-    "react-native-webview": "8.1.1",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-screens": "~2.10.1",
+    "react-native-svg": "12.1.0",
+    "react-native-web": "~0.13.7",
+    "react-native-webview": "10.7.0",
     "react-navigation": "^4.4.0",
     "react-navigation-stack": "^1.10.3",
     "rn-pdf-reader-js": "^0.7.2",
     "rn-sequelize": "github:punisher97/rn-sequelize",
-    "sentry-expo": "^2.1.2",
+    "sentry-expo": "~2.0.0",
     "snakecase-keys": "^3.2.0",
     "uuid": "^7.0.3"
   },
   "devDependencies": {
     "appium": "^1.18.1",
-    "babel-preset-expo": "^8.1.0",
-    "jest-expo": "^37.0.0",
+    "babel-preset-expo": "^8.3.0",
+    "jest-expo": "^39.0.0",
     "react-native-testing-library": "^1.14.0",
     "react-test-renderer": "16.8",
     "sequelize": "^5.22.3",
