--- a/bin/build
+++ b/bin/build
@@ -37,9 +37,8 @@ success = system(<<~CMD)
     --keystore-alias #{data.fetch(:keystore_alias)}                            \
     --output dist/field-app.aab                                             && \
                                                                                \
-  (which bundletool || brew install bundletool)                             && \
                                                                                \
-  bundletool build-apks                                                        \
+  java -jar /home/mulaiko/code/truefootprint/truefootprint-credentials/bundletool.jar build-apks                                          \
     --bundle=dist/field-app.aab                                                \
     --output=tmp/field-app.apks                                                \
     --ks #{keystore_path}                                                      \
@@ -53,4 +52,5 @@ success = system(<<~CMD)
   mv tmp/universal.apk dist/field-app.apk
 CMD
 
+puts"Done with build script"
 exit(success ? 0 : 1)
