Fix app reset from DevConsole

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-random": "~9.0.0",
     "expo-secure-store": "~9.2.0",
     "expo-task-manager": "~8.5.0",
+    "expo-updates": "~0.3.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
