--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "@react-native-community/netinfo": "5.9.6",
+    "@react-native-picker/picker": "^1.9.11",
     "Base64": "^1.1.0",
     "camelcase-keys": "^6.2.2",
     "expo": "^39.0.0",
@@ -22,6 +23,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
+    "react-native-elements": "^3.3.2",
     "react-native-fullwidth-image": "^0.1.3",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-maps": "0.27.1",
